--- a/RadioButtonCards.html
+++ b/RadioButtonCards.html
@@ -2,32 +2,112 @@
 <html>
 <head>
     <style>
+    body {
+        padding: 1rem;
+        color: hsla(215, 5%, 50%, 1);
+    }
+    h1 {
+        color: hsla(215, 5%, 10%, 1);
+    }
+    .card-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 1rem;
+    }
     .card {
-        border: 1px solid black;
-        padding: 10px;
-        margin: 10px;
+        width: 85%;
+        height: 65%;
+    }
+    .card input[type="radio"] {
+        display: none;
+    }
+    .card label {
+        display: grid;
+        grid-template-columns: 2fr 1fr 0.2fr;
+        background: transparent;
+        border: 1px solid #181818;
+        padding: 1.5rem;
+        height: 100%;
         cursor: pointer;
+        transition: all 0.3s ease;
     }
 
-    .card-selected {
-        background-color: lightblue;
+    .card label::after {
+        content: "✓";
+        font-size: 1.5rem;
+        display: none;
     }
+    .card input[type="radio"]:checked + label {
+        background: #D6C5B9;
+        color: white;
+        border-color: #181818;
+    }
+    .card input[type="radio"]:checked + label::after {
+        display: block;
+    }
+    @media only screen and (max-width: 700px) {
+        .card-container {
+        grid-template-columns: 1fr;
+        }
+    }
+
+    .description {
+        font-size: 0.8rem;
+        color: #777;
+    }
+
+    .symbol-container{
+        align-self: center;
+    }
+
     </style>
 </head>
 <body>
-    <div class="card" onclick="selectCard('option1')">
-        <input type="radio" id="option1" name="option" value="Option 1" hidden>
-        <label for="option1">Option 1</label>
-    </div>
+    <div class="card-container">
+        <div class="card" onclick="selectCard('option1')">
+            <input type="radio" id="option1" name="option" value="Option 1" hidden>
+            <label for="option1">
+                <div class="content-container">
+                    <span>
+                        <h3>Kleine Torte</h3>
+                        <p class="description">Eine Torte für 10 Personen<br>Ca. 10cm Durchmesser</p>
+                    </span>
+                </div>
+                <div class="symbol-container">
+                    <a href="https://www.flaticon.com/free-icon/cake_7627623?term=cake&page=1&position=18&origin=search&related_id=7627623" title="cake icons">Cake icons created by monkik - Flaticon</a>
+                </div>
+            </label>
+        </div>
 
-    <div class="card" onclick="selectCard('option2')">
-        <input type="radio" id="option2" name="option" value="Option 2" hidden>
-        <label for="option2">Option 2</label>
-    </div>
+        <div class="card" onclick="selectCard('option2')">
+            <input type="radio" id="option2" name="option" value="Option 2" hidden>
+            <label for="option2">
+                <div class="content-container">
+                    <span>
+                        <h3>Mitlere Torte</h3>
+                        <p class="description">Eine Torte für 10 Personen<br>Ca. 10cm Durchmesser</p>
+                    </span>
+                </div>
+                <div class="symbol-container">
+                    <a href="https://www.flaticon.com/free-icon/cake_2682446?term=cake&page=1&position=7&origin=search&related_id=2682446" title="cake icons">Cake icons created by monkik - Flaticon</a>
+                </div>
+            </label>
+        </div>
 
-    <div class="card" onclick="selectCard('option3')">
-        <input type="radio" id="option3" name="option" value="Option 3" hidden>
-        <label for="option3">Option 3</label>
+        <div class="card" onclick="selectCard('option3')">
+            <input type="radio" id="option3" name="option" value="Option 3" hidden>
+            <label for="option3">
+                <div class="content-container">
+                    <span>
+                        <h3>Grosse Torte</h3>
+                        <p class="description">Eine Torte für 10 Personen<br>Ca. 10cm Durchmesser</p>
+                    </span>
+                </div>
+                <div class="symbol-container">
+                    <a href="https://www.flaticon.com/free-icon/wedding-cake_2950215?term=cake&page=1&position=55&origin=search&related_id=2950215" title="cake icons">Cake icons created by monkik - Flaticon</a>
+                </div>
+            </label>
+        </div>
     </div>
 
     <script>
