--- a/RadioButtonCards.html
+++ b/RadioButtonCards.html
@@ -73,7 +73,7 @@
                     </span>
                 </div>
                 <div class="symbol-container">
-                    <a href="https://www.flaticon.com/free-icon/cake_7627623?term=cake&page=1&position=18&origin=search&related_id=7627623" title="cake icons">Cake icons created by monkik - Flaticon</a>
+                    <img src="assets/littleCake.png" alt="Small Cake">
                 </div>
             </label>
         </div>
@@ -88,7 +88,7 @@
                     </span>
                 </div>
                 <div class="symbol-container">
-                    <a href="https://www.flaticon.com/free-icon/cake_2682446?term=cake&page=1&position=7&origin=search&related_id=2682446" title="cake icons">Cake icons created by monkik - Flaticon</a>
+                    <img src="assets/middleCake.png" alt="Middle Cake">
                 </div>
             </label>
         </div>
@@ -103,7 +103,7 @@
                     </span>
                 </div>
                 <div class="symbol-container">
-                    <a href="https://www.flaticon.com/free-icon/wedding-cake_2950215?term=cake&page=1&position=55&origin=search&related_id=2950215" title="cake icons">Cake icons created by monkik - Flaticon</a>
+                    <img src="assets/bigCake.png" alt="Big Cake">
                 </div>
             </label>
         </div>
