--- a/RadioButtonCards.html
+++ b/RadioButtonCards.html
@@ -59,6 +59,10 @@
     .symbol-container{
         align-self: center;
     }
+
+    .symbol-container img {
+        width: 50%;
+    }
     </style>
 </head>
 <body>
