--- a/RadioButtonCards.html
+++ b/RadioButtonCards.html
@@ -2,17 +2,10 @@
 <html>
 <head>
     <style>
-    body {
-        padding: 1rem;
-        color: hsla(215, 5%, 50%, 1);
-    }
-    h1 {
-        color: hsla(215, 5%, 10%, 1);
-    }
     .card-container {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
-        gap: 1rem;
+        gap: 1em;
     }
     .card {
         width: 85%;
