--- a/RadioButtonCards.html
+++ b/RadioButtonCards.html
@@ -16,10 +16,10 @@
     }
     .card label {
         display: grid;
-        grid-template-columns: 2fr 1fr 0.2fr;
+        grid-template-columns: 2fr 0.7fr 0.1fr;
         background: transparent;
         border: 1px solid #181818;
-        padding: 1.5rem;
+        padding: 1.5em;
         height: 100%;
         cursor: pointer;
         transition: all 0.3s ease;
@@ -27,7 +27,7 @@
 
     .card label::after {
         content: "✓";
-        font-size: 1.5rem;
+        font-size: 1.5em;
         display: none;
     }
     .card input[type="radio"]:checked + label {
@@ -45,7 +45,7 @@
     }
 
     .description {
-        font-size: 0.8rem;
+        font-size: 1em;
         color: #777;
     }
 
@@ -54,7 +54,7 @@
     }
 
     .symbol-container img {
-        width: 50%;
+        width: 1em;
     }
     </style>
 </head>
