--- a/RadioButtonCards.html
+++ b/RadioButtonCards.html
@@ -27,7 +27,7 @@
 
     .card label::after {
         content: "✓";
-        font-size: 1.5em;
+        font-size: 22px;
         display: none;
     }
     .card input[type="radio"]:checked + label {
@@ -45,7 +45,7 @@
     }
 
     .description {
-        font-size: 1em;
+        font-size: 14px;
         color: #777;
     }
 
@@ -54,7 +54,7 @@
     }
 
     .symbol-container img {
-        width: 1em;
+        width: 60%;
     }
     </style>
 </head>
