--- a/RadioButtonCards.html
+++ b/RadioButtonCards.html
@@ -2,6 +2,10 @@
 <html>
 <head>
     <style>
+    body {
+        display: grid;
+        justify-content: center;
+    }
     .card-container {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
@@ -54,7 +58,7 @@
     }
 
     .symbol-container img {
-        width: 60%;
+        width: 80%;
     }
     </style>
 </head>
