--- a/RadioButtonCards.html
+++ b/RadioButtonCards.html
@@ -5,6 +5,7 @@
     body {
         display: grid;
         justify-content: center;
+        width: 100%;
     }
     .card-container {
         display: grid;
