--- a/RadioButtonCards.html
+++ b/RadioButtonCards.html
@@ -3,9 +3,8 @@
 <head>
     <style>
     body {
-        display: grid;
+        display: flex;
         justify-content: center;
-        width: 100%;
     }
     .card-container {
         display: grid;
