--- a/RadioButtonCards.html
+++ b/RadioButtonCards.html
@@ -2,14 +2,12 @@
 <html>
 <head>
     <style>
-    body {
-        display: flex;
-        justify-content: center;
-    }
     .card-container {
         display: grid;
+        justify-content: center;
         grid-template-columns: 1fr 1fr 1fr;
         gap: 0.3em;
+        width: 100%;
     }
     .card {
         width: 85%;
