--- a/RadioButtonCards.html
+++ b/RadioButtonCards.html
@@ -5,6 +5,7 @@
     .card-container {
         display: grid;
         justify-content: center;
+        justify-items: center;
         grid-template-columns: 1fr 1fr 1fr;
         gap: 0.3em;
         width: 100%;
