--- a/RadioButtonCards.html
+++ b/RadioButtonCards.html
@@ -8,7 +8,7 @@
         justify-items: center;
         grid-template-columns: 1fr 1fr 1fr;
         gap: 0.3em;
-        width: 100vw;
+        width: 100%;
     }
     .card {
         width: 85%;
