--- a/RadioButtonCards.html
+++ b/RadioButtonCards.html
@@ -10,6 +10,12 @@
         gap: 0.3em;
         width: 100%;
     }
+    .card label h3 {
+        font-family: "Cormorant Garamond Semi Bold";
+        font-size: 22px;
+        color: #301D10;
+    } 
+
     .card {
         width: 85%;
         height: 65%;
