--- a/RadioButtonCards.html
+++ b/RadioButtonCards.html
@@ -11,7 +11,7 @@
         width: 100%;
     }
     .card label h3 {
-        font-family: "Cormorant Garamond Semi Bold";
+        font-family: "Cormorant Garamond Semi Bold", serif;
         font-size: 22px;
         color: #301D10;
     } 
