--- a/RadioButtonCards.html
+++ b/RadioButtonCards.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <style>
+    @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500;600&display=swap');
+
     .card-container {
         display: grid;
         justify-content: center;
@@ -10,8 +12,8 @@
         gap: 0.3em;
         width: 100%;
     }
-    .card label h6 {
-        font-family: "Cormorant Garamond Semi Bold", serif;
+    .h6 {
+        font-family: 'Cormorant Garamond', serif;
         font-size: 22px;
         color: #301D10;
     } 
